syntax = "proto3";
package teos.v2;

message GetUserRequest {
  // Request to get information about a specific user. Contains the user id.

  bytes user_id = 1;
}

message GetUserResponse {
  // Response with the information the tower has about a specific user

  uint32 available_slots = 1;
  uint32 subscription_expiry = 2;
  repeated bytes appointments = 3;
}

message GetUsersResponse {
  // Response with information about all the users registered with the tower. Contains a list of user ids.

  repeated bytes user_ids = 1;
}